[package]
name = "dndcent"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0.1.6"
indoc = "1.0"
maplit = "*"
lazy_static = "1.4.0"
rocket = "0.4.6"
macros = { path = "src/srv/macros" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "serve"]

[build-dependencies]
base64 = "*"
rand = "*"

[[bin]]
path = "src/srv/main/main.rs"
name = "dndcent"
