[package]
name = "dndcent"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.59"
typetag = "0.1.6"
indoc = "1.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json", "serve"] }
base64 = "0.13.0"
rand = "0.8.2"
enum-iterator = "0.6.0"

macros = { path = "src/srv/macros" }

[[bin]]
path = "src/srv/main/main.rs"
name = "dndcent"
