[package]
name = "client-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8"
serde = { version = "*", features = ["derive"] }
client_macros = { path = "../client_macros" }
reqwest = "0.11.6"
bincode = "1.3"