[package]
name = "home"
version = "0.1.0"
edition = "2021"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
sanitise-file-name = "1.0"
pantheon = { path = "../pantheon-lib" }

[profile.release]
strip = "debuginfo"
codegen-units = 1
opt-level = "z"
lto = "fat"