[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.60", features=["full"], optional = true }
quote = { version = "1.0.8", optional = true }
walkdir = { version = "2.3.1", optional = true }

[features]
server = ["syn", "quote", "walkdir"]
client = []