[package]
name = "pantheon-bin"
version = "0.1.0"
edition = "2021"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
default-run = "pantheon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pantheon"
path = "src/main.rs"

[dependencies]
actix-web = "4"
mime = "0.3.16"
mime_guess = "*"
structopt = "0.3"
jwalk = "*"
bincode = "1.3"
colored = "*"
anyhow = "*"
serde = { version = "*" }
shrinkwraprs = "*"
pantheon = { path="../pantheon-lib", default-features = false }
