[package]
name = "pantheon"
version = "0.1.0"
edition = "2021"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]

[dependencies]
bincode = "1.3"
anyhow = "*"
shrinkwraprs = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "0.11.6", optional = true }
seed = { version = "*", optional = true }

[features]
client = ["reqwest", "seed"]