[package]
name = "dndcent"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2021"

[profile.dev]
split-debuginfo = "packed"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
typetag = "0.1.8"
indoc = "1.0.3"
maplit = "1.0.2"
lazy_static = "1.4.0"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] }
base64 = "0.13.0"
rand = "0.8.4"
enum-iterator = "0.7.0"
colored = "2.0.0"

proc_macros = { path = "src/srv/proc_macros" }

[[bin]]
path = "src/srv/main/main.rs"
name = "dndcent"
