[package]
name = "dndcent"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

typetag = "0.1.6"

macros = { path = "macros" }
