[package]
name = "pantheon"
version = "0.1.0"
edition = "2021"
default-run = "pantheon"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
server_macros = { path = "../server_macros" }
mime_guess = "*"
structopt = "0.3"
jwalk = "*"
bincode = "1.3"
colored = "*"
anyhow = "*"
shrinkwraprs = "*"