[package]
name = "macros"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.60", features=["full"] }
quote = "1.0.8"
Inflector = {version="0.11.4", default-features=false}
walkdir = "2.3.1"
proc-macro2 = "1.0.24"